@@ -1,3 +1,8 @@
+Thu Oct 27 09:57:56 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* include/ruby/ruby.h (SIZE_MAX): define SIZE_MAX if not defined.
+	  patched by The Written Word Inc. [ruby-core:40422] [Bug #5489]
+
 Tue Feb 14 00:00:19 2012  okkez  <okkez000@gmail.com>
 
 	* thread_pthread.c (rb_thread_create_timer_thread): fix memory
